tests/snapshots/script__posix__test_pacman_script_fish.snap
---
source: tests/script.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
#!/usr/bin/env fish

if not command -q claptrap
    echo "claptrap command not found. Please install it first, see https://claptrap.sh for instructions."
    exit 1
end

eval (claptrap --spec examples/pacman/spec.toml --output-format fish -- $argv | string collect)

if not set -q claptrap__subcommand
  :
else
  echo "claptrap__subcommand: $claptrap__subcommand"
  switch $claptrap__subcommand
    case "query"
      if set -q claptrap_query_search
      for i in (seq (count $claptrap_query_search))
        echo "claptrap_query_search[$i]: $claptrap_query_search[$i]"
      end
      end
      if set -q claptrap_query_info
      for i in (seq (count $claptrap_query_info))
        echo "claptrap_query_info[$i]: $claptrap_query_info[$i]"
      end
      end
    case "sync"
      if set -q claptrap_sync_search
      for i in (seq (count $claptrap_sync_search))
        echo "claptrap_sync_search[$i]: $claptrap_sync_search[$i]"
      end
      end
      if set -q claptrap_sync_info
      echo "claptrap_sync_info: $claptrap_sync_info"
      end
      if set -q claptrap_sync_package
      for i in (seq (count $claptrap_sync_package))
        echo "claptrap_sync_package[$i]: $claptrap_sync_package[$i]"
      end
      end
  end
end
